[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vimwiki_to_org"
version = "1.2.0"
authors = [
    { name="Bryan Ramos", email="bryan.ramos@hey.com" },
]
description="Converts vimwiki files to org mode"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CryptoRodeo/VimWikiToOrg"
"Bug Tracker" = "https://github.com/CryptoRodeo/VimWikiToOrg/issues"

[project.scripts]
vimwiki_to_org = "vimwiki_to_org.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}
